kubernetes/kanidm/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
  # annotations:
  #   traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  selector:
    app.kubernetes.io/name: kanidm
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 8443
  - name: ldaps
    protocol: TCP
    port: 3636
    targetPort: 3636
