kubernetes/kanidm/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanidm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - auth.slfhst.io
    secretName: kanidm-cert-prod
  rules:
  - host: auth.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanidm
            port:
              number: 8443
